--- a/styles/new.css
+++ b/styles/new.css
@@ -49,7 +49,7 @@
 
 .section-discripton1 {
     color: rgb(255, 0, 0);
-    font-family: Inter;
+    font-family: "Inter", sans-serif;
     font-size: 24px;
     font-weight: 500;
     margin-top: 10px;
@@ -58,7 +58,7 @@
 
 .section-discripton2 {
     color: rgb(7, 2, 17);
-    font-family: Inter;
+    font-family: "Inter", sans-serif;
     font-size: 48px;
     font-weight: 700;
     margin-top: 3px;
