--- a/styles/new.css
+++ b/styles/new.css
@@ -2,7 +2,6 @@
 * {
     font-family: "Merriweather", serif;
     font-weight: normal;
-    justify-content: center;
 }
 
 .header {
@@ -35,9 +34,13 @@
 }
 
 .section-contain {
+    justify-content: center;
     align-items: center;
     text-align: center;
-    margin: 50px 400px;
+    margin: 120px 400px;
+    padding: 0 195px;
+    width: 802.9px;
+    height: 806px;
 }
 
 .section-head {
@@ -62,4 +65,231 @@
     font-size: 48px;
     font-weight: 700;
     margin-top: 3px;
+}
+
+/* second section style  */
+.second-section {
+    background-image: linear-gradient(90.00deg, rgb(7, 2, 17), rgba(7, 2, 17, 0) 100%), url(../images/Vectorrr.png);
+    background-repeat: no-repeat;
+    width: 1320px;
+    height: 600px;
+    border-radius: 16px;
+    /* align-items: center; */
+    margin: 50px 350px;
+}
+
+.second-section-container {
+    padding: 125px 500px 145px 125px;
+}
+
+.section-title {
+    color: rgb(255, 255, 255);
+    font-size: 64px;
+    font-weight: 900;
+    text-align: left;
+    margin-bottom: 0px;
+}
+
+.sec-dis {
+    color: rgba(255, 255, 255, 0.8);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+    text-align: left;
+    margin-top: 25px;
+    margin-bottom: 32px;
+}
+
+.join {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 20px;
+    text-align: left;
+}
+
+.second-section-img {
+    float: right;
+    margin: 70px 138px;
+    background-image: radial-gradient();
+
+}
+
+/* .third-section style */
+.third-section {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 16px;
+    background: linear-gradient(180.00deg, rgba(255, 0, 0, 0.1), rgba(255, 0, 0, 0) 100%);
+    width: 1320px;
+    height: 482px;
+    margin: 120px 350px;
+    padding: 100px 0;
+}
+
+.third-section p {
+    margin: 15px;
+}
+
+.third-section span,
+p {
+    font-family: "Inter", sans-serif;
+    font-size: 32px;
+    font-weight: 600;
+    text-transform: capitalize;
+}
+
+.third-section-contain span {
+    color: rgb(255, 0, 0);
+}
+
+.third-section button {
+    width: 167px;
+    height: 56px;
+    padding: 16px 32px 16px 32px;
+    border-radius: 8px;
+    border: none;
+    background: rgb(255, 0, 0);
+    color: rgb(255, 255, 255);
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-top: 45px;
+}
+
+.fourth-section {
+    width: 1320px;
+    height: 463px;
+    display: flex;
+    text-align: left;
+    margin: 100px 350px;
+    align-items: center;
+    justify-content: center;
+}
+
+.fourth-section-cotainer-01 {
+    width: 393px;
+    height: 255px;
+    margin-top: 20px;
+}
+
+.fourth-section-cotainer-01 h3 {
+    color: rgb(255, 0, 0);
+    font-family: "Inter", sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.fourth-section-cotainer-01 h1 {
+    color: rgb(7, 2, 17);
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    /* text-transform: capitalize; */
+    margin-top: 16px;
+    margin-bottom: 22px;
+}
+
+.fourth-section-cotainer-01 p {
+    color: rgba(7, 2, 17, 0.6);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.fourth-section-cotainer-02 {
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    margin-left: 70px;
+    margin-right: 118px;
+    width: 463px;
+    height: 463px;
+    display: flex;
+    background: white;
+    height: 420px;
+    width: 420px;
+    border-radius: 50%;
+    border: 15px solid rgb(255, 0, 0);
+}
+
+.fourth-section-cotainer-03 {
+    width: 276px;
+    height: 170px;
+    margin-top: 0px;
+}
+
+.fourth-section-cotainer-03 h1 {
+    color: rgb(255, 0, 0);
+    font-family: "Inter", sans-serif;
+    font-size: 48px;
+    font-weight: 700;
+    margin-top: 0;
+    margin-bottom: auto;
+}
+
+.fourth-section-cotainer-03 p {
+    color: rgba(7, 2, 17, 0.6);
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.fourth-section-cotainer-03 img {
+    width: 140px;
+    height: 140px;
+    margin-top: 1px;
+}
+
+.fifth-section {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 1320px;
+    height: 986.07px;
+    margin: 120px 400px;
+}
+
+.fifth-section-banner {
+    width: 1068px;
+    height: 260px;
+    text-align: center;
+}
+
+.fifth-section-banner-s-title {
+    color: rgb(7, 2, 17);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.fifth-section-banner-b-title {
+    font-size: 72px;
+    font-weight: 900;
+    line-height: 91px;
+}
+
+.fifth-section-banner-b-title span {
+    color: rgb(255, 0, 0);
+    font-size: 72px;
+    font-weight: 900;
+    line-height: 91px;
+}
+
+.fifth-section-banner-dis {
+    color: rgba(7, 2, 17, 0.6);
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.fifth-section-img1 {
+    width: 796.46px;
+    height: 662.07px;
+}
+
+.fifth-section-img2 {
+    width: 429px;
+    height: 433px;
 }
