--- a/styles/new.css
+++ b/styles/new.css
@@ -183,17 +183,15 @@ p {
 
 .fourth-section-cotainer-01 h1 {
     color: rgb(7, 2, 17);
-    font-family: Merriweather;
     font-size: 48px;
     font-weight: 900;
-    /* text-transform: capitalize; */
     margin-top: 16px;
     margin-bottom: 22px;
 }
 
 .fourth-section-cotainer-01 p {
     color: rgba(7, 2, 17, 0.6);
-    font-family: Inter;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
 }
@@ -248,13 +246,17 @@ p {
     text-align: center;
     width: 1320px;
     height: 986.07px;
-    margin: 120px 400px;
+    margin: 120px 350px;
+    border-radius: 16px 0px 16px 16px;
+    background-image: url(../images/Rectangle\ 2.png);
+    background-repeat: no-repeat;
+    background-position-y: 700px;
 }
 
 .fifth-section-banner {
     width: 1068px;
     height: 260px;
-    text-align: center;
+    margin: 0px auto;
 }
 
 .fifth-section-banner-s-title {
@@ -262,12 +264,14 @@ p {
     font-family: Inter;
     font-size: 24px;
     font-weight: 500;
+    margin-bottom: 16px;
 }
 
 .fifth-section-banner-b-title {
     font-size: 72px;
     font-weight: 900;
-    line-height: 91px;
+    margin-top: 16px;
+    margin-bottom: 28px;
 }
 
 .fifth-section-banner-b-title span {
@@ -284,12 +288,59 @@ p {
     font-weight: 500;
 }
 
+.fifth-section-img {
+    display: flex;
+}
+
 .fifth-section-img1 {
     width: 796.46px;
     height: 662.07px;
 }
 
 .fifth-section-img2 {
+    position: absolute;
+    /* float: right; */
+    margin-top: 130px;
+    margin-left: 770px;
+    width: 250x;
+    height: 250px;
+    transform: rotate(0deg);
+}
+
+.fifth-section-img3 {
     width: 429px;
     height: 433px;
+    margin-left: 95px;
+    margin-top: 8px;
+}
+
+.sixth-section {
+    justify-content: left;
+    align-items: start;
+    text-align: left;
+    width: 1320px;
+    height: 1163px;
+    margin: 120px 350px;
+}
+
+.sixth-section-cotainer-01 h3 {
+    color: rgb(255, 0, 0);
+    font-family: "Inter", sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.sixth-section-cotainer-01 h1 {
+    color: rgb(7, 2, 17);
+    font-size: 48px;
+    font-weight: 900;
+    margin-top: 16px;
+    margin-bottom: 22px;
+}
+
+.sixth-section-cotainer-01 p {
+    color: rgba(7, 2, 17, 0.6);
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
 }
