--- a/styles/new.css
+++ b/styles/new.css
@@ -92,7 +92,7 @@
 
 .sec-dis {
     color: rgba(255, 255, 255, 0.8);
-    font-family: Inter;
+    font-family: "Inter" sans-serif;
     font-size: 18px;
     font-weight: 400;
     text-align: left;
@@ -132,8 +132,7 @@
     margin: 15px;
 }
 
-.third-section span,
-p {
+.third-section p,.third-section span {
     font-family: "Inter", sans-serif;
     font-size: 32px;
     font-weight: 600;
