--- a/styles/new.css
+++ b/styles/new.css
@@ -1,6 +1,6 @@
 /* Common Shared Style */
 * {
-    font-family: "Merriweather", serif;
+    /* font-family: "Merriweather", serif; */
     font-weight: normal;
 }
 .header {
@@ -11,6 +11,7 @@
     border-radius: 16px;
     align-items: center;
     margin: 50px auto;
+    font-family: "Merriweather", serif;
 }
 
 .header-contain {
@@ -40,6 +41,7 @@
     padding: 0 195px;
     width: 802.9px;
     height: 806px;
+    font-family: "Inter", sans-serif;
 }
 
 .section-head {
@@ -87,11 +89,12 @@
     font-weight: 900;
     text-align: left;
     margin-bottom: 0px;
+    font-family: "Merriweather", serif;
 }
 
 .sec-dis {
     color: rgba(255, 255, 255, 0.8);
-    font-family: "Inter" sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 18px;
     font-weight: 400;
     text-align: left;
@@ -101,7 +104,7 @@
 
 .join {
     color: rgb(255, 255, 255);
-    font-family: "Inter" sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     text-align: left;
     background-color: transparent;
@@ -125,6 +128,7 @@
     height: 482px;
     margin: 120px auto;
     padding: 100px 0;
+    font-family: "Inter", sans-serif;
 }
 
 .third-section p {
@@ -171,8 +175,8 @@
     width: 393px;
     height: 255px;
     margin-top: 20px;
+    font-family: "Inter", sans-serif;
 }
-
 .fourth-section-cotainer-01 h3 {
     color: rgb(255, 0, 0);
     font-family: "Inter", sans-serif;
@@ -186,6 +190,7 @@
     font-weight: 900;
     margin-top: 16px;
     margin-bottom: 22px;
+    font-family: "Merriweather", serif;
 }
 
 .fourth-section-cotainer-01 p {
@@ -260,7 +265,7 @@
 
 .fifth-section-banner-s-title {
     color: rgb(7, 2, 17);
-    font-family: "Inter" sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 24px;
     font-weight: 500;
     margin-bottom: 16px;
@@ -271,6 +276,7 @@
     font-weight: 900;
     margin-top: 16px;
     margin-bottom: 28px;
+    font-family: "Merriweather", serif;
 }
 
 .fifth-section-banner-b-title span {
@@ -335,6 +341,7 @@
     font-weight: 900;
     margin-top: 16px;
     margin-bottom: 22px;
+    font-family: "Merriweather", serif;
 }
 
 .sixth-section-cotainer-01 p {
@@ -374,14 +381,14 @@
 
 .seventh-section-banner {
     color: rgb(7, 2, 17);
-    font-family: Merriweather;
+    font-family: "Merriweather", serif;
     font-size: 48px;
     font-weight: 900;
 }
 
 .seventh-section-dis {
     color: rgba(7, 2, 17, 0.6);
-    font-family: Inter;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
 }
@@ -392,7 +399,7 @@
 
 .seventh-section input {
     color: rgba(7, 2, 17, 0.3);
-    font-family: "Inter" sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 18px;
     font-weight: 400;
     padding-left: 35px;
@@ -413,7 +420,7 @@
     width: 210px;
     height: 71px;
     color: rgb(255, 255, 255);
-    font-family: "Inter" sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 600;
 }
@@ -426,7 +433,7 @@
     margin-left: auto;
     margin-right: auto;
     color: rgb(255, 255, 255);
-    font-family: "Inter" sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 24px;
     font-weight: 400;
     padding: 120px 275px 120px 275px;
